[gd_scene load_steps=18 format=4 uid="uid://douckpnydifwo"]

[ext_resource type="Script" path="res://meteoroid-level/scripts/level_1.gd" id="1_llpvr"]
[ext_resource type="PackedScene" uid="uid://dmvpevcgrtlss" path="res://meteoroid-level/scenes/shuttle.tscn" id="1_uvlf3"]
[ext_resource type="Texture2D" uid="uid://0mfdqajbwosw" path="res://meteoroid-level/assets/meteoroid-level-background.png" id="3_7c5m7"]
[ext_resource type="Texture2D" uid="uid://ccg8mpjy84ni4" path="res://meteoroid-level/assets/meteoroid-level-border-background.png" id="4_74fw0"]
[ext_resource type="FontFile" uid="uid://dkfxjce33i1c" path="res://fonts/dogicapixel.ttf" id="6_o2chr"]
[ext_resource type="PackedScene" uid="uid://bsd8tu0gnjycp" path="res://meteoroid-level/scenes/path.tscn" id="7_kfep3"]
[ext_resource type="PackedScene" uid="uid://v3uha6yq4pj7" path="res://meteoroid-level/scenes/non_moving_debris.tscn" id="9_ceabf"]
[ext_resource type="AudioStream" uid="uid://27vqa3i0mmv4" path="res://meteoroid-level/assets/Playful 8-bit Sounds & Music/Playful 8-bit Sounds & Music/SFX/Playful_Hit.wav" id="10_npqwt"]
[ext_resource type="FontFile" uid="uid://beq64bbss8mr8" path="res://meteoroid-level/assets/dogicapixel.ttf" id="11_fkuvp"]
[ext_resource type="AudioStream" uid="uid://dto1phit6bgor" path="res://meteoroid-level/assets/Playful 8-bit Sounds & Music/Playful 8-bit Sounds & Music/SFX/Playful_LevelUp.wav" id="11_rmbhd"]
[ext_resource type="Texture2D" uid="uid://d3i5uhv7cwp4o" path="res://Globals/consoleBackgroundLarge.png" id="12_8mj8v"]
[ext_resource type="Script" path="res://meteoroid-level/scripts/num_moves.gd" id="12_cgkiw"]
[ext_resource type="Shader" path="res://psychescan/addons/CRTVisual.gdshader" id="13_8gxu8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_j40qh"]
texture = ExtResource("3_7c5m7")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_iywoa"]
texture = ExtResource("4_74fw0")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)

[sub_resource type="TileSet" id="TileSet_u3n5j"]
tile_size = Vector2i(128, 128)
physics_layer_0/collision_layer = 1
sources/9 = SubResource("TileSetAtlasSource_iywoa")
sources/10 = SubResource("TileSetAtlasSource_j40qh")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_im4nw"]
shader = ExtResource("13_8gxu8")
shader_parameter/overlay = true
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/brightness = 1.4
shader_parameter/scanlines_opacity = 0.0
shader_parameter/scanlines_width = 0.0
shader_parameter/grille_opacity = 0.0
shader_parameter/roll = true
shader_parameter/roll_speed = 5.0
shader_parameter/roll_size = 25.0
shader_parameter/roll_variation = 0.581
shader_parameter/distort_intensity = 0.0
shader_parameter/aberration = 4.75e-08
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/pixelate = false
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.0
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[node name="Level1" type="Node2D"]
script = ExtResource("1_llpvr")

[node name="Shuttle" parent="." instance=ExtResource("1_uvlf3")]
z_index = 1
position = Vector2(-618, -60)

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false
zoom = Vector2(0.75, 0.75)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD7////CQAAAAAAAAD9////CQAAAAAAAAD+////CQAAAAAAAAD/////CQAAAAAAAAAAAPz/CQAAAAAAAAAAAP3/CgAAAAAAAAAAAP7/CgAAAAAAAAAAAP//CgAAAAAAAAAAAAAACgAAAAAAAAAAAAEACgAAAAAAAAAAAAIACQAAAAAAAAAAAPv/CQAAAAAAAAAAAAMACQAAAAAAAAABAPv/CQAAAAAAAAACAPv/CQAAAAAAAAADAPv/CQAAAAAAAAAEAPv/CQAAAAAAAAAFAPv/CQAAAAAAAAAGAPv/CQAAAAAAAAABAAMACQAAAAAAAAACAAMACQAAAAAAAAADAAMACQAAAAAAAAAEAAMACQAAAAAAAAAFAAMACQAAAAAAAAAGAAMACQAAAAAAAAAHAAMACQAAAAAAAAAIAAMACQAAAAAAAAAIAPv/CQAAAAAAAAAHAPv/CQAAAAAAAAABAP3/CgAAAAAAAAAFAP3/CQAAAAAAAAAHAP3/CQAAAAAAAAAIAP3/CQAAAAAAAAABAP//CgAAAAAAAAACAP//CgAAAAAAAAADAP//CgAAAAAAAAAEAP//CgAAAAAAAAAFAP//CQAAAAAAAAAGAP//CQAAAAAAAAAHAP//CQAAAAAAAAAIAP//CQAAAAAAAAABAAEACgAAAAAAAAACAAEACgAAAAAAAAADAAEACgAAAAAAAAAEAAEACgAAAAAAAAAFAAEACQAAAAAAAAAGAAEACQAAAAAAAAAHAAEACQAAAAAAAAAIAAEACQAAAAAAAAADAP3/CgAAAAAAAAD8////CQAAAAAAAAAEAP3/CgAAAAAAAAAGAP3/CQAAAAAAAAACAP3/CgAAAAAAAAABAPz/CQAAAAAAAAACAPz/CQAAAAAAAAADAPz/CQAAAAAAAAAEAPz/CQAAAAAAAAAFAPz/CQAAAAAAAAAGAPz/CQAAAAAAAAAHAPz/CQAAAAAAAAAIAPz/CQAAAAAAAAAIAP7/CQAAAAAAAAAHAP7/CQAAAAAAAAAGAP7/CQAAAAAAAAAFAP7/CQAAAAAAAAAEAP7/CgAAAAAAAAADAP7/CgAAAAAAAAACAP7/CgAAAAAAAAABAP7/CgAAAAAAAAABAAAACgAAAAAAAAACAAAACgAAAAAAAAADAAAACgAAAAAAAAAEAAAACgAAAAAAAAAFAAAACQAAAAAAAAAGAAAACQAAAAAAAAAHAAAACQAAAAAAAAAIAAAACQAAAAAAAAAIAAIACQAAAAAAAAAHAAIACQAAAAAAAAAGAAIACQAAAAAAAAAFAAIACQAAAAAAAAAEAAIACQAAAAAAAAADAAIACQAAAAAAAAACAAIACQAAAAAAAAABAAIACQAAAAAAAAD///r/CQAAAAAAAAAAAPr/CQAAAAAAAAABAPr/CQAAAAAAAAACAPr/CQAAAAAAAAADAPr/CQAAAAAAAAAEAPr/CQAAAAAAAAAFAPr/CQAAAAAAAAAGAPr/CQAAAAAAAAAHAPr/CQAAAAAAAAAIAPr/CQAAAAAAAAAJAPr/CQAAAAAAAAAJAPv/CQAAAAAAAAAJAPz/CQAAAAAAAAAJAP3/CQAAAAAAAAAJAP7/CQAAAAAAAAAJAP//CQAAAAAAAAAJAAAACQAAAAAAAAAJAAEACQAAAAAAAAAJAAIACQAAAAAAAAAJAAMACQAAAAAAAAAJAAQACQAAAAAAAAAIAAQACQAAAAAAAAAHAAQACQAAAAAAAAAGAAQACQAAAAAAAAAFAAQACQAAAAAAAAAEAAQACQAAAAAAAAADAAQACQAAAAAAAAACAAQACQAAAAAAAAABAAQACQAAAAAAAAAAAAQACQAAAAAAAAD//wQACQAAAAAAAAD//wMACQAAAAAAAAD//wIACQAAAAAAAAD//wEACQAAAAAAAAD//wAACQAAAAAAAAD///7/CQAAAAAAAAD///3/CQAAAAAAAAD///z/CQAAAAAAAAD///v/CQAAAAAAAAD+//r/CQAAAAAAAAD9//r/CQAAAAAAAAD8//r/CQAAAAAAAAD7//r/CQAAAAAAAAD7//v/CQAAAAAAAAD7//z/CQAAAAAAAAD7//3/CQAAAAAAAAD6//3/CQAAAAAAAAD6//7/CQAAAAAAAAD6////CQAAAAAAAAD6/wAACQAAAAAAAAD7/wAACQAAAAAAAAD7//7/CQAAAAAAAAD6//z/CQAAAAAAAAD6//v/CQAAAAAAAAD6//r/CQAAAAAAAAD8//v/CQAAAAAAAAD9//v/CQAAAAAAAAD+//v/CQAAAAAAAAD+//z/CQAAAAAAAAD9//z/CQAAAAAAAAD8//z/CQAAAAAAAAD8//3/CQAAAAAAAAD9//3/CQAAAAAAAAD+//3/CQAAAAAAAAD+//7/CQAAAAAAAAD9//7/CQAAAAAAAAD8//7/CQAAAAAAAAD8/wAACQAAAAAAAAD9/wAACQAAAAAAAAD+/wAACQAAAAAAAAD+/wEACQAAAAAAAAD+/wIACQAAAAAAAAD+/wMACQAAAAAAAAD+/wQACQAAAAAAAAD9/wQACQAAAAAAAAD8/wQACQAAAAAAAAD7/wQACQAAAAAAAAD6/wQACQAAAAAAAAD6/wMACQAAAAAAAAD6/wIACQAAAAAAAAD6/wEACQAAAAAAAAD7/wEACQAAAAAAAAD8/wEACQAAAAAAAAD9/wEACQAAAAAAAAD9/wIACQAAAAAAAAD9/wMACQAAAAAAAAD8/wMACQAAAAAAAAD8/wIACQAAAAAAAAD7/wIACQAAAAAAAAD7/wMACQAAAAAAAAAJAAUACQAAAAAAAAAJAAYACQAAAAAAAAAIAAYACQAAAAAAAAAHAAYACQAAAAAAAAAGAAYACQAAAAAAAAAFAAYACQAAAAAAAAAEAAYACQAAAAAAAAADAAYACQAAAAAAAAACAAYACQAAAAAAAAABAAYACQAAAAAAAAAAAAYACQAAAAAAAAD//wYACQAAAAAAAAD+/wYACQAAAAAAAAD9/wYACQAAAAAAAAD8/wYACQAAAAAAAAD7/wYACQAAAAAAAAD6/wYACQAAAAAAAAD5/wYACQAAAAAAAAD4/wYACQAAAAAAAAD3/wYACQAAAAAAAAD2/wYACQAAAAAAAAD1/wYACQAAAAAAAAD1/wUACQAAAAAAAAD1/wQACQAAAAAAAAD1/wMACQAAAAAAAAD1/wIACQAAAAAAAAD1/wEACQAAAAAAAAD2/wEACQAAAAAAAAD2/wAACQAAAAAAAAD2////CQAAAAAAAAD2//7/CQAAAAAAAAD1//7/CQAAAAAAAAD1//3/CQAAAAAAAAD1//z/CQAAAAAAAAD1//v/CQAAAAAAAAD1//r/CQAAAAAAAAD2//r/CQAAAAAAAAD3//r/CQAAAAAAAAD4//r/CQAAAAAAAAD5//r/CQAAAAAAAAD5//v/CQAAAAAAAAD4//z/CQAAAAAAAAD4//v/CQAAAAAAAAD3//v/CQAAAAAAAAD2//v/CQAAAAAAAAD1////CQAAAAAAAAD1/wAACQAAAAAAAAD2//3/CQAAAAAAAAD2//z/CQAAAAAAAAD3//z/CQAAAAAAAAD5//z/CQAAAAAAAAD5//3/CQAAAAAAAAD4//3/CQAAAAAAAAD4//7/CQAAAAAAAAD3//3/CQAAAAAAAAD5//7/CQAAAAAAAAD5////CQAAAAAAAAD4////CQAAAAAAAAD3//7/CQAAAAAAAAD3////CQAAAAAAAAD3/wAACQAAAAAAAAD4/wAACQAAAAAAAAD5/wAACQAAAAAAAAD5/wEACQAAAAAAAAD4/wEACQAAAAAAAAD3/wEACQAAAAAAAAD2/wIACQAAAAAAAAD3/wIACQAAAAAAAAD4/wIACQAAAAAAAAD5/wIACQAAAAAAAAD5/wMACQAAAAAAAAD4/wMACQAAAAAAAAD3/wMACQAAAAAAAAD2/wMACQAAAAAAAAD2/wQACQAAAAAAAAD3/wQACQAAAAAAAAD4/wQACQAAAAAAAAD5/wQACQAAAAAAAAD2/wUACQAAAAAAAAD3/wUACQAAAAAAAAD4/wUACQAAAAAAAAD5/wUACQAAAAAAAAD6/wUACQAAAAAAAAD7/wUACQAAAAAAAAD8/wUACQAAAAAAAAD9/wUACQAAAAAAAAD+/wUACQAAAAAAAAD//wUACQAAAAAAAAAAAAUACQAAAAAAAAABAAUACQAAAAAAAAACAAUACQAAAAAAAAADAAUACQAAAAAAAAAEAAUACQAAAAAAAAAFAAUACQAAAAAAAAAGAAUACQAAAAAAAAAHAAUACQAAAAAAAAAIAAUACQAAAAAAAADz/wcACQAAAAAAAADw//b/CQAAAAAAAADx//b/CQAAAAAAAADy//b/CQAAAAAAAADz//b/CQAAAAAAAAD0//b/CQAAAAAAAAD1//b/CQAAAAAAAAD2//b/CQAAAAAAAAD3//b/CQAAAAAAAAD4//b/CQAAAAAAAAD5//b/CQAAAAAAAAD6//b/CQAAAAAAAAD7//b/CQAAAAAAAAD8//b/CQAAAAAAAAD9//b/CQAAAAAAAAD+//b/CQAAAAAAAAD///b/CQAAAAAAAAAAAPb/CQAAAAAAAAABAPb/CQAAAAAAAAACAPb/CQAAAAAAAAADAPb/CQAAAAAAAAAEAPb/CQAAAAAAAAAFAPb/CQAAAAAAAAAGAPb/CQAAAAAAAAAHAPb/CQAAAAAAAAAIAPb/CQAAAAAAAAAJAPb/CQAAAAAAAAAKAPb/CQAAAAAAAAALAPb/CQAAAAAAAAAMAPb/CQAAAAAAAAANAPb/CQAAAAAAAAAOAPb/CQAAAAAAAAAPAPb/CQAAAAAAAAAPAPf/CQAAAAAAAAAPAPj/CQAAAAAAAAAPAPn/CQAAAAAAAAAPAPr/CQAAAAAAAAAPAPv/CQAAAAAAAAAPAPz/CQAAAAAAAAAPAP3/CQAAAAAAAAAPAP7/CQAAAAAAAAAPAP//CQAAAAAAAAAPAAAACQAAAAAAAAAPAAEACQAAAAAAAAAPAAIACQAAAAAAAAAPAAMACQAAAAAAAAAPAAQACQAAAAAAAAAPAAUACQAAAAAAAAAPAAYACQAAAAAAAAAPAAcACQAAAAAAAAAPAAgACQAAAAAAAAAPAAkACQAAAAAAAAAPAAoACQAAAAAAAAAOAAoACQAAAAAAAAANAAoACQAAAAAAAAAMAAoACQAAAAAAAAALAAoACQAAAAAAAAAKAAoACQAAAAAAAAAJAAoACQAAAAAAAAAIAAoACQAAAAAAAAAHAAoACQAAAAAAAAAGAAoACQAAAAAAAAAFAAoACQAAAAAAAAAEAAoACQAAAAAAAAADAAoACQAAAAAAAAACAAoACQAAAAAAAAABAAoACQAAAAAAAAAAAAoACQAAAAAAAAD//woACQAAAAAAAAD+/woACQAAAAAAAAD9/woACQAAAAAAAAD8/woACQAAAAAAAAD7/woACQAAAAAAAAD6/woACQAAAAAAAAD5/woACQAAAAAAAAD4/woACQAAAAAAAAD3/woACQAAAAAAAAD2/woACQAAAAAAAAD1/woACQAAAAAAAAD0/woACQAAAAAAAADz/woACQAAAAAAAADy/woACQAAAAAAAADx/woACQAAAAAAAADw/woACQAAAAAAAADw/wkACQAAAAAAAADw/wgACQAAAAAAAADw/wcACQAAAAAAAADw/wYACQAAAAAAAADw/wUACQAAAAAAAADw/wQACQAAAAAAAADw/wMACQAAAAAAAADw/wIACQAAAAAAAADw/wEACQAAAAAAAADw/wAACQAAAAAAAADw////CQAAAAAAAADw//7/CQAAAAAAAADw//3/CQAAAAAAAADw//z/CQAAAAAAAADw//v/CQAAAAAAAADw//r/CQAAAAAAAADw//n/CQAAAAAAAADw//j/CQAAAAAAAADw//f/CQAAAAAAAAD0/wgACQAAAAAAAAD0/wcACQAAAAAAAAD0/wYACQAAAAAAAAD0/wUACQAAAAAAAAD0/wQACQAAAAAAAAD0/wMACQAAAAAAAAD0/wIACQAAAAAAAAD0/wEACQAAAAAAAAD0/wAACQAAAAAAAAD0////CQAAAAAAAAD0//7/CQAAAAAAAAD0//3/CQAAAAAAAAD0//z/CQAAAAAAAAD0//v/CQAAAAAAAAD0//r/CQAAAAAAAAD0//n/CQAAAAAAAAD0//j/CQAAAAAAAAD0//f/CQAAAAAAAADz//f/CQAAAAAAAADy//f/CQAAAAAAAADx//f/CQAAAAAAAADx//j/CQAAAAAAAADx//n/CQAAAAAAAADx//r/CQAAAAAAAADx//v/CQAAAAAAAADx//z/CQAAAAAAAADx//3/CQAAAAAAAADx//7/CQAAAAAAAADx////CQAAAAAAAADx/wAACQAAAAAAAADx/wEACQAAAAAAAADx/wIACQAAAAAAAADx/wMACQAAAAAAAADx/wQACQAAAAAAAADx/wUACQAAAAAAAADx/wYACQAAAAAAAADx/wcACQAAAAAAAADx/wgACQAAAAAAAADx/wkACQAAAAAAAADy/wkACQAAAAAAAADy/wgACQAAAAAAAADy/wcACQAAAAAAAADy/wYACQAAAAAAAADy/wUACQAAAAAAAADy/wQACQAAAAAAAADy/wMACQAAAAAAAADy/wIACQAAAAAAAADy/wEACQAAAAAAAADy/wAACQAAAAAAAADy////CQAAAAAAAADy//7/CQAAAAAAAADy//3/CQAAAAAAAADy//z/CQAAAAAAAADy//v/CQAAAAAAAADy//r/CQAAAAAAAADy//n/CQAAAAAAAADy//j/CQAAAAAAAADz//j/CQAAAAAAAADz//n/CQAAAAAAAADz//r/CQAAAAAAAADz//v/CQAAAAAAAADz//z/CQAAAAAAAADz//3/CQAAAAAAAADz//7/CQAAAAAAAADz////CQAAAAAAAADz/wAACQAAAAAAAADz/wEACQAAAAAAAADz/wIACQAAAAAAAADz/wMACQAAAAAAAADz/wQACQAAAAAAAADz/wUACQAAAAAAAADz/wYACQAAAAAAAADz/wgACQAAAAAAAADz/wkACQAAAAAAAAD0/wkACQAAAAAAAAD1/wkACQAAAAAAAAD1/wgACQAAAAAAAAD1/wcACQAAAAAAAAD2/wcACQAAAAAAAAD2/wgACQAAAAAAAAD2/wkACQAAAAAAAAD3/wkACQAAAAAAAAD3/wgACQAAAAAAAAD3/wcACQAAAAAAAAD4/wcACQAAAAAAAAD4/wgACQAAAAAAAAD4/wkACQAAAAAAAAD5/wkACQAAAAAAAAD5/wgACQAAAAAAAAD5/wcACQAAAAAAAAD6/wcACQAAAAAAAAD6/wgACQAAAAAAAAD6/wkACQAAAAAAAAD7/wkACQAAAAAAAAD7/wgACQAAAAAAAAD7/wcACQAAAAAAAAD8/wcACQAAAAAAAAD8/wgACQAAAAAAAAD8/wkACQAAAAAAAAD9/wkACQAAAAAAAAD9/wgACQAAAAAAAAD9/wcACQAAAAAAAAD+/wcACQAAAAAAAAD+/wgACQAAAAAAAAD+/wkACQAAAAAAAAD//wkACQAAAAAAAAD//wgACQAAAAAAAAD//wcACQAAAAAAAAAAAAcACQAAAAAAAAAAAAgACQAAAAAAAAAAAAkACQAAAAAAAAABAAkACQAAAAAAAAABAAgACQAAAAAAAAABAAcACQAAAAAAAAACAAcACQAAAAAAAAACAAgACQAAAAAAAAACAAkACQAAAAAAAAADAAkACQAAAAAAAAADAAgACQAAAAAAAAADAAcACQAAAAAAAAAEAAcACQAAAAAAAAAEAAgACQAAAAAAAAAEAAkACQAAAAAAAAAFAAkACQAAAAAAAAAFAAgACQAAAAAAAAAFAAcACQAAAAAAAAAGAAcACQAAAAAAAAAGAAgACQAAAAAAAAAGAAkACQAAAAAAAAAHAAkACQAAAAAAAAAHAAgACQAAAAAAAAAHAAcACQAAAAAAAAAIAAcACQAAAAAAAAAIAAgACQAAAAAAAAAIAAkACQAAAAAAAAAJAAkACQAAAAAAAAAJAAgACQAAAAAAAAAJAAcACQAAAAAAAAAKAAcACQAAAAAAAAAKAAYACQAAAAAAAAAKAAUACQAAAAAAAAAKAAQACQAAAAAAAAAKAAMACQAAAAAAAAAKAAIACQAAAAAAAAAKAAEACQAAAAAAAAAKAAAACQAAAAAAAAAKAP//CQAAAAAAAAAKAP7/CQAAAAAAAAAKAP3/CQAAAAAAAAAKAPz/CQAAAAAAAAAKAPv/CQAAAAAAAAAKAPr/CQAAAAAAAAAKAPn/CQAAAAAAAAAKAPj/CQAAAAAAAAAKAPf/CQAAAAAAAAAJAPf/CQAAAAAAAAAIAPf/CQAAAAAAAAAHAPf/CQAAAAAAAAAGAPf/CQAAAAAAAAAFAPf/CQAAAAAAAAAEAPf/CQAAAAAAAAADAPf/CQAAAAAAAAACAPf/CQAAAAAAAAABAPf/CQAAAAAAAAAAAPf/CQAAAAAAAAD///f/CQAAAAAAAAD+//f/CQAAAAAAAAD9//f/CQAAAAAAAAD8//f/CQAAAAAAAAD7//f/CQAAAAAAAAD6//f/CQAAAAAAAAD5//f/CQAAAAAAAAD4//f/CQAAAAAAAAD3//f/CQAAAAAAAAD2//f/CQAAAAAAAAD1//f/CQAAAAAAAAD1//j/CQAAAAAAAAD1//n/CQAAAAAAAAD2//n/CQAAAAAAAAD2//j/CQAAAAAAAAD3//j/CQAAAAAAAAD3//n/CQAAAAAAAAD4//n/CQAAAAAAAAD4//j/CQAAAAAAAAD5//j/CQAAAAAAAAD5//n/CQAAAAAAAAD6//n/CQAAAAAAAAD6//j/CQAAAAAAAAD7//j/CQAAAAAAAAD7//n/CQAAAAAAAAD8//n/CQAAAAAAAAD8//j/CQAAAAAAAAD9//j/CQAAAAAAAAD9//n/CQAAAAAAAAD+//n/CQAAAAAAAAD+//j/CQAAAAAAAAD///j/CQAAAAAAAAD///n/CQAAAAAAAAAAAPn/CQAAAAAAAAAAAPj/CQAAAAAAAAABAPj/CQAAAAAAAAABAPn/CQAAAAAAAAACAPn/CQAAAAAAAAACAPj/CQAAAAAAAAADAPj/CQAAAAAAAAADAPn/CQAAAAAAAAAEAPn/CQAAAAAAAAAEAPj/CQAAAAAAAAAFAPj/CQAAAAAAAAAFAPn/CQAAAAAAAAAGAPn/CQAAAAAAAAAGAPj/CQAAAAAAAAAHAPj/CQAAAAAAAAAHAPn/CQAAAAAAAAAIAPn/CQAAAAAAAAAIAPj/CQAAAAAAAAAJAPj/CQAAAAAAAAAJAPn/CQAAAAAAAAALAPf/CQAAAAAAAAALAPj/CQAAAAAAAAALAPn/CQAAAAAAAAALAPr/CQAAAAAAAAALAPv/CQAAAAAAAAALAPz/CQAAAAAAAAALAP3/CQAAAAAAAAALAP7/CQAAAAAAAAALAP//CQAAAAAAAAALAAAACQAAAAAAAAALAAEACQAAAAAAAAALAAIACQAAAAAAAAALAAMACQAAAAAAAAALAAQACQAAAAAAAAALAAUACQAAAAAAAAALAAYACQAAAAAAAAALAAcACQAAAAAAAAALAAgACQAAAAAAAAAKAAgACQAAAAAAAAAKAAkACQAAAAAAAAALAAkACQAAAAAAAAAMAAkACQAAAAAAAAAMAAgACQAAAAAAAAAMAAcACQAAAAAAAAAMAAYACQAAAAAAAAAMAAUACQAAAAAAAAAMAAQACQAAAAAAAAAMAAMACQAAAAAAAAAMAAIACQAAAAAAAAAMAAEACQAAAAAAAAAMAAAACQAAAAAAAAAMAP//CQAAAAAAAAAMAP7/CQAAAAAAAAAMAP3/CQAAAAAAAAAMAPz/CQAAAAAAAAAMAPv/CQAAAAAAAAAMAPr/CQAAAAAAAAAMAPn/CQAAAAAAAAAMAPj/CQAAAAAAAAAMAPf/CQAAAAAAAAANAPf/CQAAAAAAAAANAPj/CQAAAAAAAAANAPn/CQAAAAAAAAANAPr/CQAAAAAAAAANAPv/CQAAAAAAAAANAPz/CQAAAAAAAAANAP3/CQAAAAAAAAANAP7/CQAAAAAAAAANAP//CQAAAAAAAAANAAAACQAAAAAAAAANAAEACQAAAAAAAAANAAIACQAAAAAAAAANAAMACQAAAAAAAAANAAQACQAAAAAAAAANAAUACQAAAAAAAAANAAYACQAAAAAAAAANAAcACQAAAAAAAAANAAgACQAAAAAAAAANAAkACQAAAAAAAAAOAAkACQAAAAAAAAAOAAgACQAAAAAAAAAOAAcACQAAAAAAAAAOAAYACQAAAAAAAAAOAAUACQAAAAAAAAAOAAQACQAAAAAAAAAOAAMACQAAAAAAAAAOAAIACQAAAAAAAAAOAAEACQAAAAAAAAAOAAAACQAAAAAAAAAOAP//CQAAAAAAAAAOAP7/CQAAAAAAAAAOAP3/CQAAAAAAAAAOAPz/CQAAAAAAAAAOAPv/CQAAAAAAAAAOAPr/CQAAAAAAAAAOAPn/CQAAAAAAAAAOAPj/CQAAAAAAAAAOAPf/CQAAAAAAAAA=")
tile_set = SubResource("TileSet_u3n5j")

[node name="ControlsMessage" type="Label" parent="."]
top_level = true
z_index = 1
offset_left = 1253.0
offset_top = -650.0
offset_right = 1971.0
offset_bottom = -311.0
theme_override_fonts/font = ExtResource("6_o2chr")
theme_override_font_sizes/font_size = 40
text = "Arrows for 

direction,

Backspace/ESC

to undo,

Enter to confirm"
autowrap_mode = 2

[node name="InstructionsMessage" type="Label" parent="."]
top_level = true
z_index = 1
offset_left = 1269.0
offset_top = -205.0
offset_right = 1793.0
offset_bottom = 206.0
theme_override_constants/line_spacing = 30
theme_override_fonts/font = ExtResource("6_o2chr")
theme_override_font_sizes/font_size = 42
text = "Plan out the 
course to avoid the obstacles! Reach the glowing tile to proceed."
autowrap_mode = 2

[node name="Debris" type="Node" parent="."]

[node name="Non-moving Debris" parent="Debris" instance=ExtResource("9_ceabf")]
position = Vector2(261, 260)

[node name="Non-moving Debris2" parent="Debris" instance=ExtResource("9_ceabf")]
position = Vector2(515, 132)

[node name="Non-moving Debris3" parent="Debris" instance=ExtResource("9_ceabf")]
position = Vector2(515, -254)

[node name="Non-moving Debris4" parent="Debris" instance=ExtResource("9_ceabf")]
position = Vector2(258, 5)

[node name="Non-moving Debris5" parent="Debris" instance=ExtResource("9_ceabf")]
position = Vector2(4, -128)

[node name="Non-moving Debris6" parent="Debris" instance=ExtResource("9_ceabf")]
position = Vector2(133, 134)

[node name="Non-moving Debris7" parent="Debris" instance=ExtResource("9_ceabf")]
position = Vector2(258, -123)

[node name="Path" parent="." instance=ExtResource("7_kfep3")]

[node name="ColorRect" type="ColorRect" parent="."]
top_level = true
visibility_layer = 2
offset_left = -1556.0
offset_top = -1172.0
offset_right = 1342.0
offset_bottom = 723.0
color = Color(0.778561, 0.843608, 0.835762, 0)

[node name="TargetHighlight" type="ColorRect" parent="."]
top_level = true
visibility_layer = 2
offset_left = 511.0
offset_top = -129.0
offset_right = 641.0
offset_bottom = -2.0
color = Color(0.778561, 0.843608, 0.835762, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="LoseSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_npqwt")

[node name="WinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_rmbhd")
volume_db = -10.0

[node name="ConsoleBackgroundLarge" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(736, 35)
texture = ExtResource("12_8mj8v")

[node name="Camera2D2" type="Camera2D" parent="."]
position = Vector2(639, -36)

[node name="NumMoves" type="Label" parent="."]
offset_left = -431.0
offset_top = -616.0
offset_right = -63.0
offset_bottom = -579.0
theme_override_fonts/font = ExtResource("11_fkuvp")
theme_override_font_sizes/font_size = 42
script = ExtResource("12_cgkiw")

[node name="CRTShader" type="Polygon2D" parent="."]
material = SubResource("ShaderMaterial_im4nw")
position = Vector2(-1123, -1043)
scale = Vector2(3.84383, 3.22281)
color = Color(1, 1, 1, 0)
polygon = PackedVector2Array(150, 135, 159, 112, 183, 98, 546, 98, 570, 114, 587, 145, 587, 437, 577, 461, 563, 475, 186, 475, 167, 454, 153, 423, 149.415, 275.925)

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
